syntax = "proto3";

package soma.rpc;

import "google/protobuf/struct.proto";
import "soma/rpc/bcs.proto";
import "soma/rpc/owner.proto";

// An object on the Sui blockchain.
message Object {
  // This Object serialized as BCS.
  optional Bcs bcs = 1;

  // `ObjectId` for this object.
  optional string object_id = 2;

  // Version of the object.
  optional uint64 version = 3;

  // The digest of this Object.
  optional string digest = 4;

  // Owner of the object.
  optional Owner owner = 5;

  // The type of this object.
  optional string object_type = 6;

  // BCS bytes of a struct value.
  optional Bcs contents = 7;

  // The digest of the transaction that created or last mutated this object
  optional string previous_transaction = 8;

  // JSON rendering of the object.
  optional google.protobuf.Value json = 100;

  // Current balance if this object is a `Coin`
  optional uint64 balance = 101;
}